--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
-	"useTabs": true,
-	"singleQuote": true,
-	"trailingComma": "none",
+	"useTabs": false,
+	"singleQuote": false,
+	"semi": false,
+	"trailingComma": "all",
 	"printWidth": 100,
 	"plugins": ["prettier-plugin-svelte"],
 	"pluginSearchDirs": ["."],
